--- a/restock.html
+++ b/restock.html
@@ -2,77 +2,79 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Ajouter des pièces à l'inventaire</title>
+  <title>Ajouter une pièce à l'inventaire</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      padding: 2em;
+    }
+    .container {
+      background: white;
+      padding: 2em;
+      max-width: 400px;
+      margin: auto;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    input, button {
+      width: 100%;
+      margin-bottom: 1em;
+      padding: 0.75em;
+      font-size: 1em;
+    }
+    button {
+      background: green;
+      color: white;
+      border: none;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    button:hover {
+      background: darkgreen;
+    }
+  </style>
 </head>
 <body>
-  <h2>Ajouter une pièce</h2>
-  <input type="text" id="codePiece" placeholder="Entrez le code de la pièce" />
-  <button onclick="ajouterPiece()">Ajouter</button>
+  <div class="container">
+    <h2>Ajouter une pièce</h2>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <input id="camion" placeholder="Camion" />
+    <input id="piece" placeholder="Code de la pièce" />
+    <input id="description" placeholder="Description" />
+    <button onclick="ajouter()">Ajouter</button>
+  </div>
+
   <script>
-    const GITHUB_TOKEN = "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"; // à utiliser seulement pour test
-    const USERNAME = "azizgouia123";
-    const REPO = "ispect";
-    const BRANCH = "main";
-    const FILE_PATH = "inventaire_global.xlsx";
+    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbyrnrz2u1KIPHsNxFfzHAZ-tXQhbkzUAf2n9hCElqmVi2GipU_ynCtcRYzis3ZYaiJaPg/exec";
 
-    async function ajouterPiece() {
-      const code = document.getElementById("codePiece").value.trim();
-      if (!code) return alert("Code de pièce vide");
+    function ajouter() {
+      const camion = document.getElementById("camion").value.trim();
+      const piece = document.getElementById("piece").value.trim();
+      const description = document.getElementById("description").value.trim();
 
-      const url = `https://api.github.com/repos/${USERNAME}/${REPO}/contents/${FILE_PATH}`;
-
-      // Étape 1 : lire le fichier Excel actuel sur GitHub
-      const getRes = await fetch(url, {
-        headers: {
-          Authorization: `token ${GITHUB_TOKEN}`
-        }
-      });
-
-      if (!getRes.ok) {
-        alert("Erreur de lecture : " + getRes.statusText);
+      if (!camion || !piece || !description) {
+        alert("❗ Veuillez remplir tous les champs.");
         return;
       }
 
-      const fileData = await getRes.json();
-      const sha = fileData.sha;
-      const content = atob(fileData.content.replace(/\n/g, ""));
-      const workbook = XLSX.read(content, { type: "binary" });
-
-      // Étape 2 : ajouter le code dans une nouvelle ligne (feuille 1)
-      const ws = workbook.Sheets[workbook.SheetNames[0]];
-      const data = XLSX.utils.sheet_to_json(ws, { header: 1 });
-      data.push([new Date().toLocaleString(), code]); // Date + code
-      const newWs = XLSX.utils.aoa_to_sheet(data);
-      const newWb = XLSX.utils.book_new();
-      XLSX.utils.book_append_sheet(newWb, newWs, "Feuille1");
-
-      const wbout = XLSX.write(newWb, { type: "base64", bookType: "xlsx" });
-
-      // Étape 3 : envoyer le fichier mis à jour sur GitHub
-      const putRes = await fetch(url, {
-        method: "PUT",
-        headers: {
-          Authorization: `token ${GITHUB_TOKEN}`,
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({
-          message: `Ajout de la pièce ${code}`,
-          content: wbout,
-          sha: sha,
-          branch: BRANCH
-        })
-      });
-
-      if (putRes.ok) {
-        alert("✅ Pièce ajoutée !");
-        document.getElementById("codePiece").value = "";
-      } else {
-        const err = await putRes.json();
-        alert("❌ Erreur GitHub : " + (err.message || "inconnue"));
-        console.error(err);
-      }
+      fetch(SCRIPT_URL, {
+        method: "POST",
+        body: JSON.stringify({ camion, piece, description }),
+        headers: { "Content-Type": "application/json" }
+      })
+      .then(res => res.text())
+      .then(txt => {
+        if (txt === "OK") {
+          alert("✅ Pièce ajoutée avec succès !");
+          document.getElementById("camion").value = "";
+          document.getElementById("piece").value = "";
+          document.getElementById("description").value = "";
+        } else {
+          alert("❌ Erreur : " + txt);
+        }
+      })
+      .catch(err => alert("🚨 Erreur réseau : " + err));
     }
   </script>
 </body>
