--- a/restock.html
+++ b/restock.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Ajouter une pièce à l'inventaire</title>
   <style>
-    body {
+    body {     ;k
       font-family: Arial, sans-serif;
       background: #f5f5f5;
       padding: 2em;
