--- a/restock.html
+++ b/restock.html
@@ -1,49 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Ajouter une pièce à l'inventaire</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      padding: 2em;
-    }
-    .container {
-      background: white;
-      padding: 2em;
-      max-width: 400px;
-      margin: auto;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    input, button {
-      width: 100%;
-      margin-bottom: 1em;
-      padding: 0.75em;
-      font-size: 1em;
-    }
-    button {
-      background: green;
-      color: white;
-      border: none;
-      cursor: pointer;
-      font-weight: bold;
-    }
-    button:hover {
-      background: darkgreen;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <title>Ajouter une pièce (no-cors)</title>
 </head>
 <body>
-  <div class="container">
-    <h2>Ajouter une pièce</h2>
-
-    <input id="camion" placeholder="Camion" />
-    <input id="piece" placeholder="Code de la pièce" />
-    <input id="description" placeholder="Description" />
-    <button onclick="ajouter()">Ajouter</button>
-  </div>
+  <h2>Ajouter une pièce</h2>
+  <input id="camion" placeholder="Camion" />
+  <input id="piece" placeholder="Code de la pièce" />
+  <input id="description" placeholder="Description" />
+  <button onclick="ajouter()">Ajouter</button>
 
   <script>
     const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwSrlEsweXaONxhoQi6IXTwBlHBDvOQsatt2pCJ-gcHS8jFW-I0JWxsjQVoYGhWe38BKw/exec";
@@ -54,27 +20,25 @@
       const description = document.getElementById("description").value.trim();
 
       if (!camion || !piece || !description) {
-        alert("❗ Veuillez remplir tous les champs.");
+        alert("Veuillez remplir tous les champs.");
         return;
       }
 
       fetch(SCRIPT_URL, {
         method: "POST",
-        body: JSON.stringify({ camion, piece, description }),
-        headers: { "Content-Type": "application/json" }
-      })
-      .then(res => res.text())
-      .then(txt => {
-        if (txt === "OK") {
-          alert("✅ Pièce ajoutée avec succès !");
-          document.getElementById("camion").value = "";
-          document.getElementById("piece").value = "";
-          document.getElementById("description").value = "";
-        } else {
-          alert("❌ Erreur : " + txt);
-        }
-      })
-      .catch(err => alert("🚨 Erreur réseau : " + err));
+        mode: "no-cors",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ camion, piece, description })
+      }).then(() => {
+        alert("✅ Pièce envoyée. (Pas de confirmation possible à cause de CORS)");
+        document.getElementById("camion").value = "";
+        document.getElementById("piece").value = "";
+        document.getElementById("description").value = "";
+      }).catch(err => {
+        alert("Erreur lors de l'envoi : " + err);
+      });
     }
   </script>
 </body>
